# Ali_seq

./: .gitignore  README.md  main.py  pyproject.toml
data/: HBA_HUMAN-LGB2_LUPLU.fasta  ali.fasta.matDir  dotPlot.fasta  sequences_synthetases.fasta  test.fasta  test.fasta.result  toaster.fasta
src/: BLOSUM.py  alignement.py  fasta.py  msa.py  sequence.py  toaster.fasta  utils.py
